# libnfsidmap-regex

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  builtin_nfsidmap_internal.h  configure.ac  libnfsidmap-regex.5  libnfsidmap-regex.spec  nfsidmap_internal.h  regex.c
debian/: changelog  control  copyright  libnfsidmap-regex.substvars  libnfsidmap-regex1.substvars  lintian-overrides  manpages  rules  shlibs.local  watch
